--- a/app/generic/module_common/pubspec.yaml
+++ b/app/generic/module_common/pubspec.yaml
@@ -1,22 +1,34 @@
 name: module_common
 description: A new Flutter package project.
+publish_to: "none"
 version: 0.0.1
 homepage:
 
 environment:
-  sdk: '>=3.0.6 <4.0.0'
+  sdk: ">=3.0.6 <4.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
+  extensions:
+    path: ../../library/extensions
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  library_injection:
+    path: ../../library/injection
+  shared_preferences: ^2.2.2
+  sprintf: ^7.0.0
+  ui_kit:
+    path: ../ui_kit
+  uuid: ^4.2.1
 
 dev_dependencies:
+  build_runner: ^2.4.6
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-
+  kiwi_generator: ^4.1.0
+  
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
