--- a/app/app_stokme/pubspec.yaml
+++ b/app/app_stokme/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   firebase_core: ^2.16.0
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   library_injection:
     path: ../library/injection
   mobile_scanner: ^3.4.1
