--- a/app/generic/ui_kit/pubspec.yaml
+++ b/app/generic/ui_kit/pubspec.yaml
@@ -1,20 +1,32 @@
 name: ui_kit
 description: A new Flutter package project.
+publish_to: "none"
 version: 0.0.1
 homepage:
 
 environment:
-  sdk: '>=3.0.6 <4.0.0'
+  sdk: ">=3.0.6 <4.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
+  equatable: ^2.0.5
+  extensions:
+    path: ../../library/extensions
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.3
+  google_fonts: ^6.1.0
+  library_injection:
+    path: ../../library/injection
+  module_common:
+    path: ../module_common
 
 dev_dependencies:
+  build_runner: ^2.4.6
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  kiwi_generator: ^4.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
