chore: implement theming mechanism

--- a/app/app_stokme/android/gradle.properties
+++ b/app/app_stokme/android/gradle.properties
@@ -6,6 +6,7 @@ org.gradle.vfs.watch=true
 org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.daemon=true
+org.gradle.java.home=/Users/mellysujakto/.sdkman/candidates/java/current
 
 # This is necessary for AABs to work well with Eversafe's App Forgery detection
 # https://github.com/google/bundletool/issues/155#issuecomment-613546541
