--- a/app/app_stokme/pubspec.yaml
+++ b/app/app_stokme/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   mobile_scanner: ^3.4.1
   module_common:
     path: ../generic/module_common
+  ui_kit:
+    path: ../generic/ui_kit
 
 dev_dependencies:
   build_runner: ^2.4.6
