chore: add module_common in pubspec

--- a/app/feature/login/pubspec.yaml
+++ b/app/feature/login/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
     sdk: flutter
   library_injection:
     path: ../../library/injection
+  module_common:
+    path: ../../generic/module_common
   ui_kit:
     path: ../../generic/ui_kit
 
