--- a/app/feature/login/pubspec.yaml
+++ b/app/feature/login/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  firebase_library:
+    path: ../../library/firebase_library
   flutter:
     sdk: flutter
   library_injection:
@@ -19,9 +21,11 @@ dependencies:
     path: ../../generic/ui_kit
 
 dev_dependencies:
+  build_runner: ^2.4.6
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  kiwi_generator: ^4.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
