--- a/app/app_stokme/pubspec.yaml
+++ b/app/app_stokme/pubspec.yaml
@@ -82,7 +82,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    #   - images/a_dot_burr.jpeg
+    - assets/
+    - assets/images/
+    - assets/images/logo.png
     #   - images/a_dot_ham.jpeg
     - assets/audio/scanner_beep.mp3
 
