--- a/app/generic/ui_kit/pubspec.yaml
+++ b/app/generic/ui_kit/pubspec.yaml
@@ -35,9 +35,9 @@ dev_dependencies:
 flutter:
 
   # To add assets to your package, add an assets section, like this:
-  assets:
-    - assets/
-    - assets/images/
+  # assets:
+  #   - assets/
+  #   - assets/images/
 
   # For details regarding assets in packages, see
   # https://flutter.dev/assets-and-images/#from-packages
