--- a/app/app_stokme/pubspec.yaml
+++ b/app/app_stokme/pubspec.yaml
@@ -85,6 +85,7 @@ flutter:
     - assets/
     - assets/images/
     - assets/icons/
+    - assets/icons/bottom_nav_bar_icons/
     - assets/audio/scanner_beep.mp3
 
   # An image asset can refer to one or more resolution-specific "variants", see
