--- a/app/feature/dashboard/pubspec.yaml
+++ b/app/feature/dashboard/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
     path: ../../library/injection
   module_common:
     path: ../../generic/module_common
+  ui_kit:
+    path: ../../generic/ui_kit
 
 dev_dependencies:
   build_runner: ^2.4.6
