--- a/app/feature/dashboard/pubspec.yaml
+++ b/app/feature/dashboard/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  firebase_library:
+    path: ../../library/firebase_library
   flutter:
     sdk: flutter
   library_injection:
