--- a/app/feature/dashboard/pubspec.yaml
+++ b/app/feature/dashboard/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  data_abstraction:
+    path: ../../generic/data_abstraction
   firebase_library:
     path: ../../library/firebase_library
   flutter:
