chore: fix lint

--- a/app/app_stokme/pubspec.yaml
+++ b/app/app_stokme/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
     path: ../feature/stock
   feature_transaction:
     path: ../feature/transaction
+  firebase_core: ^2.24.0
   firebase_library:
     path: ../library/firebase_library
   flutter:
