--- a/app/feature/transaction/pubspec.yaml
+++ b/app/feature/transaction/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  bluetooth_print: ^4.3.0
   data_abstraction:
     path: ../../generic/data_abstraction
   flutter:
