--- a/app/feature/stock/pubspec.yaml
+++ b/app/feature/stock/pubspec.yaml
@@ -9,10 +9,15 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  firebase_library:
+    path: ../../library/firebase_library
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.3
   library_injection:
     path: ../../library/injection
+  ui_kit:
+    path: ../../generic/ui_kit
 
 dev_dependencies:
   build_runner: ^2.4.6
