--- a/app/app_stokme/pubspec.yaml
+++ b/app/app_stokme/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_core: ^2.24.0
   firebase_library:
     path: ../library/firebase_library
+  firebase_remote_config: ^4.3.8
   flutter:
     sdk: flutter
   flutter_localizations:
