--- a/app/generic/ui_kit/pubspec.yaml
+++ b/app/generic/ui_kit/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.3
   google_fonts: ^6.1.0
+  infinite_scroll_pagination: ^4.0.0
   library_injection:
     path: ../../library/injection
   mobile_scanner: ^3.5.5
