--- a/app/generic/module_common/pubspec.yaml
+++ b/app/generic/module_common/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  bluetooth_print: ^4.3.0
   data_abstraction:
     path: ../data_abstraction
   extensions:
