--- a/app/generic/module_common/pubspec.yaml
+++ b/app/generic/module_common/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  intl: ^0.18.0
   library_injection:
     path: ../../library/injection
   shared_preferences: ^2.2.2
